welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: not found: value nb
    for(j<-i to nb){
                ^