welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array[Int](num+1)
  T(0)=0
  T(1)=1
  T(2)=2
  for (i<-0 to num){
    for(j<-i to nb){
      T(j)=i
    }
  }
  return T(num)
}